force-app/main/default/objects/Catalog_Sync_State__c/Catalog_Sync_State__c.object-meta.xml
<CustomObject>
    <label>Catalog Sync State</label>
    <nameField>
        <displayFormat>SYNC-{0000}</displayFormat>
        <label>Sync State Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Catalog Sync States</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>