force-app/main/default/objects/Catalog_Sync_State__c/fields/BaselineFullConfigDeveloperName__c.field-meta.xml
<CustomField>
    <fullName>BaselineFullConfigDeveloperName__c</fullName>
    <label>Baseline Full Config Developer Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>