force-app/main/default/objects/Catalog_Sync_State__c/fields/CurrentProductConfigDeveloperName__c.field-meta.xml
<CustomField>
    <fullName>CurrentProductConfigDeveloperName__c</fullName>
    <label>Current Product Config Developer Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>