force-app/main/default/objects/Catalog_Sync_State__c/fields/CurrentProductJobId__c.field-meta.xml
<CustomField>
    <fullName>CurrentProductJobId__c</fullName>
    <label>Current Product Job Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>