force-app/main/default/objects/Catalog_Sync_State__c/fields/CurrentProductRun__c.field-meta.xml
<CustomField>
    <fullName>CurrentProductRun__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Persisted multi-stage delta run currently associated with this export target.</description>
    <label>Current Product Run</label>
    <referenceTo>Catalog_Delta_Run__c</referenceTo>
    <relationshipLabel>Catalog Sync States</relationshipLabel>
    <relationshipName>CatalogSyncStates</relationshipName>
    <type>Lookup</type>
</CustomField>