force-app/main/default/objects/Catalog_Sync_State__c/fields/CurrentProductRunMode__c.field-meta.xml
<CustomField>
    <fullName>CurrentProductRunMode__c</fullName>
    <label>Current Product Run Mode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>