force-app/main/default/objects/Catalog_Sync_State__c/fields/CurrentProductStartedAt__c.field-meta.xml
<CustomField>
    <fullName>CurrentProductStartedAt__c</fullName>
    <label>Current Product Started At</label>
    <type>DateTime</type>
</CustomField>