force-app/main/default/objects/Catalog_Sync_State__c/fields/LastRunMode__c.field-meta.xml
<CustomField>
    <fullName>LastRunMode__c</fullName>
    <label>Last Run Mode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>