force-app/main/default/objects/Catalog_Sync_State__c/fields/LastSuccessfulConfigDeveloperName__c.field-meta.xml
<CustomField>
    <fullName>LastSuccessfulConfigDeveloperName__c</fullName>
    <label>Last Successful Config Developer Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>