force-app/main/default/objects/Catalog_Sync_State__c/fields/LastSuccessfulFullSyncAt__c.field-meta.xml
<CustomField>
    <fullName>LastSuccessfulFullSyncAt__c</fullName>
    <label>Last Successful Full Sync At</label>
    <type>DateTime</type>
</CustomField>