force-app/main/default/objects/Catalog_Sync_State__c/fields/LastSuccessfulSyncAt__c.field-meta.xml
<CustomField>
    <fullName>LastSuccessfulSyncAt__c</fullName>
    <label>Last Successful Sync At</label>
    <type>DateTime</type>
</CustomField>