force-app/main/default/objects/Catalog_Sync_State__c/fields/RecentProductRunsJson__c.field-meta.xml
<CustomField>
    <fullName>RecentProductRunsJson__c</fullName>
    <label>Recent Product Runs JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>