force-app/main/default/objects/Catalog_Sync_State__c/fields/ResolvedTargetKey__c.field-meta.xml
<CustomField>
    <fullName>ResolvedTargetKey__c</fullName>
    <description>Stable hashed key representing the resolved product export target. Used to persist full and delta sync watermarks across matching configurations.</description>
    <externalId>true</externalId>
    <label>Resolved Target Key</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>